@@ -1,3 +1,10 @@
+Tue May 27 19:18:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
+        * tests/DCPS/Messenger/DataReaderListener.cpp:
+
+          Changed subscriber to expect from to be "Comic Book Guy" or "OpenDDS-Java".
+
 Tue May 27 17:43:43 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
